# oil_robot

./: README.md  startup.sh
force_driver/: CMakeLists.txt  package.xml
force_driver/launch/: force_driver.launch
force_driver/scripts/: force_driver.py
lift_driver/: CMakeLists.txt  package.xml
lift_driver/include/: lift_driver.h  modbusadapter.h
lift_driver/launch/: lift_driver.launch
lift_driver/src/: lift_driver.cpp  lift_driver_bak.cpp  lift_driver_v1.cpp  main.cpp  serial_driver.cpp
lift_driver/srv/: LiftCtl.srv  LiftPose.srv
oil_application/: CMakeLists.txt  README.md  package.xml
oil_application/calibration/: CalibrationTutorial.md
oil_application/launch/: oil_bringup.launch  oil_get_camera_pose.launch  oil_get_camera_pose.rviz  oil_pickup_juggle.launch  oil_with_gripper_bringup.launch  oil_with_realense.rviz  oil_with_realsense.launch  oil_with_realsense.rviz  pickup_gpd.launch
oil_application/scripts/: go_to_pose_and_cartesian_continue.py  go_to_pose_goal.py  gripper_test.py  move_cartesian.py  move_cartesian_vel_scale.py  move_continue_trajectory.py  move_ik.py  move_test.py  oil_move_client.py  oil_move_server.py  pick_and_place_listen_pose_gpd.py  pickup_gpd.py  pickup_gpd_new.py  publish_scene.py  sub_pub_pointcloud.py  time_parameterization.py  transform.py
oil_application/srv/: GetBaseEELink.srv  MoveEE.srv  MoveEEZ.srv  MoveToJointStates.srv  MoveToPoseShift.srv  MoveToPosesNamed.srv  SetVelScaling.srv
oil_description/: CMakeLists.txt  package.xml  urdf.rviz
oil_description/launch/: display.launch  gazebo.launch
oil_description/meshes/: base_link.STL  link3.STL  link6.STL  link7.STL
oil_description/urdf/: oil_description.csv  oil_description.urdf
oil_driver/: CMakeLists.txt  Joint_7_TCP_new.project  Note.txt  README.md  package.xml
oil_driver/include/: action_server.h  jointstate_publisher.h  motor_driver.h  ocservo_driver.h  trajectory.h  trajectory_follower.h
oil_driver/launch/: oil_driver.launch
oil_driver/src/: action_server.cpp  jointstate_publisher.cpp  main.cpp  modbusadapter.cpp  motor_driver.cpp  ocservo_driver.cpp  ocservo_test.cpp  trajectory_follower.cpp
oil_filler_pose/: CMakeLists.txt  README.md  package.xml
oil_filler_pose/include/: oil_filler_pose_realsense.h  realsense2_viewer.h
oil_filler_pose/launch/: abutment.launch  abutment.rviz  oil_filler_detect.launch  oil_filler_detect.rviz
oil_filler_pose/scripts/: abutment.py
oil_filler_pose/scripts/log/: abutment.py.tar.7z
oil_filler_pose/src/: center_pose.cpp  oil_filler_pose.cpp  oil_filler_pose_realsense.cpp  oil_filler_seg.cpp
oil_hmi/: CMakeLists.txt  README.md  package.xml
oil_hmi/include/: mainwindow.h  mainwindow.ui  mainwindow_ui.h
oil_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
qr_driver/: CMakeLists.txt  package.xml
(+68 files in other folders)
